--- a/style.css
+++ b/style.css
@@ -1,3 +1,79 @@
 body {
-  background-color: aqua;
+  background-color: #d5e8cfff;
+}
+
+h1 {
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  text-align: center;
+  font-size: 100px;
+  color: #dda15e;
+}
+
+.game-container {
+  text-align: center;
+}
+
+.first-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 50px;
+  padding-top: 50px;
+}
+
+.second-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 50px;
+  padding-top: 50px;
+}
+
+.green {
+  background-color: green;
+  padding: 100px;
+  border-radius: 20%;
+  border: 10px solid #000;
+
+  transition: opacity 0.3s ease;
+}
+
+.green:hover {
+  opacity: 0.8;
+}
+
+.red {
+  background-color: red;
+  padding: 100px;
+  border-radius: 20%;
+  border: 10px solid #000;
+  transition: opacity 0.3s ease;
+}
+
+.red:hover {
+  opacity: 0.8;
+}
+
+.yellow {
+  background-color: yellow;
+  padding: 100px;
+  border-radius: 20%;
+  border: 10px solid #000;
+  transition: opacity 0.3s ease;
+}
+.yellow:hover {
+  opacity: 0.7;
+}
+
+.blue {
+  background-color: blue;
+  padding: 100px;
+  border-radius: 20%;
+  border: 10px solid #000;
+  transition: opacity 0.3s ease;
+}
+
+.blue:hover {
+  opacity: 0.8;
 }
