--- a/style.css
+++ b/style.css
@@ -1,79 +1,52 @@
 body {
-  background-color: #d5e8cfff;
-}
-
-h1 {
-  font-family: "Pixelify Sans", sans-serif;
-  font-optical-sizing: auto;
   text-align: center;
-  font-size: 100px;
-  color: #dda15e;
+  background-color: #011f3f;
 }
 
-.game-container {
-  text-align: center;
+#level-title {
+  font-family: "Press Start 2P", cursive;
+  font-size: 3rem;
+  margin: 5%;
+  color: #fef2bf;
 }
 
-.first-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 50px;
-  padding-top: 50px;
+.container {
+  display: block;
+  width: 50%;
+  margin: auto;
 }
 
-.second-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 50px;
-  padding-top: 50px;
-}
-
-.green {
-  background-color: green;
-  padding: 100px;
+.btn {
+  margin: 25px;
+  display: inline-block;
+  height: 200px;
+  width: 200px;
+  border: 10px solid black;
   border-radius: 20%;
-  border: 10px solid #000;
-
-  transition: opacity 0.3s ease;
 }
 
-.green:hover {
+.game-over {
+  background-color: red;
   opacity: 0.8;
 }
 
 .red {
   background-color: red;
-  padding: 100px;
-  border-radius: 20%;
-  border: 10px solid #000;
-  transition: opacity 0.3s ease;
 }
 
-.red:hover {
-  opacity: 0.8;
-}
-
-.yellow {
-  background-color: yellow;
-  padding: 100px;
-  border-radius: 20%;
-  border: 10px solid #000;
-  transition: opacity 0.3s ease;
-}
-.yellow:hover {
-  opacity: 0.7;
+.green {
+  background-color: green;
 }
 
 .blue {
   background-color: blue;
-  padding: 100px;
-  border-radius: 20%;
-  border: 10px solid #000;
-  transition: opacity 0.3s ease;
 }
 
-.blue:hover {
-  opacity: 0.8;
+.yellow {
+  background-color: yellow;
+}
+
+.pressed {
+  box-shadow: 0 0 20px white;
+  background-color: grey;
 }
